@@ -10,5 +10,8 @@ source $srcdir/diag.sh injectmsg  0 40000
 
 # terminate *now* (don't wait for queue to drain)
 kill `cat rsyslog.pid`
+
+# now wait until rsyslog.pid is gone (and the process finished)
+source $srcdir/diag.sh wait-shutdown 
 source $srcdir/diag.sh seq-check 0 39999
 source $srcdir/diag.sh exit
