@@ -3,6 +3,10 @@ Version 5.1.6  [v5-beta] (rgerhards), 2009-09-??
 - feature imports from v4.5.6
 - bugfix: potential race condition when queue worker threads were
   terminated
+- bugfix: solved potential (temporary) stall of messages when the queue was
+  almost empty and few new data added (caused testbench to sometimes hang!)
+- fixed some race condition in testbench
+- added more elaborate diagnostics to parts of the testbench
 - bugfixes imported from 4.5.4:
   * bugfix: potential segfault in stream writer on destruction
   * bugfix: potential race in object loader (obj.c) during use/release
